setting up website layout with js and css

--- a/resume-site/scss/modules/_variables.scss
+++ b/resume-site/scss/modules/_variables.scss
@@ -1,5 +1,7 @@
 $slideInfo-background: #dfdfdf;
 $slideInfo-header-color: #666;
-$mainInfo-header-color: #999999;
+$mainInfo-header-color: #edeaea;
 $nav-color: #dfdfdf;
 $nav-color-hover: #fff857;
+$bodyText: 'Playfair Display', serif;
+$headerText: Montserrat;
