--- a/resume-site/scss/partials/_header.scss
+++ b/resume-site/scss/partials/_header.scss
@@ -1,14 +1,29 @@
 .mainInfo-block {
-    background: url("../img/Background-Image.JPG") no-repeat;
+    display: flex;
+    position: relative;
+    background: url("../../images/Background-Image.JPG") no-repeat center center;
+    background-size: cover;
     width: 100%;
-    height: auto;
+    height: 700px;
+}
+.display {
+    display: flex;
 }
 h1 {
+    position: absolute;
     color: $mainInfo-header-color;
+    top: 30%;
+    left: 30%;
+    text-shadow: 2px 2px 10px #000;
+    font-family: $headerText;
+    font-weight: bold;
+    font-size: 6em;
 }
 h3 a {
     color: $mainInfo-header-color;
     text-decoration: none;
+    font-family: $headerText;
+    font-size: 1.5em;
 }
 h3 a:hover {
     color: $nav-color-hover;
