--- a/resume-site/scss/style.scss
+++ b/resume-site/scss/style.scss
@@ -1,7 +1,8 @@
+@import "tools/bourbon/bourbon";
+@import "tools/normalize";
 @import "modules/functions";
 @import "modules/mixins";
 @import "modules/variables";
 @import "partials/content";
 @import "partials/header";
 @import "partials/navigation";
-@import "tools/normalize";
