--- a/resume-site/scss/style.scss
+++ b/resume-site/scss/style.scss
@@ -4,5 +4,9 @@
 @import "modules/mixins";
 @import "modules/variables";
 @import "partials/content";
-@import "partials/header";
+@import "partials/hero";
 @import "partials/navigation";
+@import "partials/about";
+@import "partials/skills";
+@import "partials/experience";
+@import "partials/contact";
