--- a/resume-site/css/style.css
+++ b/resume-site/css/style.css
@@ -364,91 +364,338 @@ textarea {
   font: inherit;
   /* 2 */ }
 
-.displayNone {
-  display: none; }
+@font-face {
+  font-family: 'bebas';
+  src: url("fonts/bebas_neue/bebas_neue-webfont.woff2") format("woff2"), url("fonts/bebas_neue/bebas_neue-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
 
-.slideInfo-block {
-  background: linear-gradient(left, #dfdfdf 5%, #333);
-  padding: 40px; }
-
-h4 {
-  color: #666;
-  font-family: "Playfair Display", serif;
-  font-weight: bold; }
-
-.experience-img {
+body {
   display: -ms-flexbox;
   display: flex;
-  position: relative;
-  padding: 20px 0;
-  width: 20%; }
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin: 0;
+  font-family: "Montserrat", sans-serif; }
 
-li {
-  font-family: "Playfair Display", serif; }
-
-p {
-  font-family: "Playfair Display", serif; }
-
-.skills {
+.info-section {
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  flex-align: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -ms-flex-line-pack: center;
-  align-content: center;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 15%;
+  width: 100%;
+  padding: 125px 0;
+  background: #fff; }
+
+.section-header {
+  font-family: "bebas", Fallback, sans-serif;
+  font-size: 30px;
+  color: #01454E;
+  width: 100%;
+  padding-bottom: 75px;
   text-align: center; }
 
-.skills-img {
-  display: inline-block;
-  width: 20%;
-  height: auto;
-  padding: 5%;
-  margin: auto; }
-
-.mainInfo-block {
+.subsection {
   display: -ms-flexbox;
   display: flex;
-  position: relative;
-  background: url("../../images/Background-Image.JPG") no-repeat center center;
-  background-size: cover;
-  width: 100%;
-  height: 700px; }
+  width: 90%;
+  margin: auto; }
 
-.display {
+#hero-section {
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  padding: 0;
+  border-bottom: 2px solid #01454E; }
 
-h1 {
+#hero-header {
   position: absolute;
-  color: #edeaea;
-  top: 30%;
-  left: 30%;
-  text-shadow: 2px 2px 10px #000;
-  font-family: Montserrat;
-  font-weight: bold;
-  font-size: 6em; }
+  display: block;
+  text-align: center;
+  width: 100%;
+  top: 140px;
+  font-size: 75px;
+  font-weight: 25;
+  color: #000;
+  z-index: 1;
+  text-shadow: 0 1px 3px #01454E; }
 
-h3 a {
-  color: #edeaea;
-  text-decoration: none;
-  font-family: Montserrat;
-  font-size: 1.5em; }
-
-h3 a:hover {
-  color: #fff857; }
+#hero-img {
+  position: relative;
+  top: 0;
+  left: 0;
+  -ms-flex-align: center;
+  -ms-grid-row-align: center;
+  align-items: center;
+  width: 100%;
+  height: auto; }
 
 .nav {
+  display: -ms-flexbox;
+  display: flex;
   position: absolute;
-  top: 100px;
+  -ms-flex-align: center;
+  align-items: center;
+  background: linear-gradient(#c5e3e5 20%, rgba(197, 227, 229, 0));
+  width: 100%;
+  height: 100px;
+  color: #fff;
   z-index: 2; }
 
+.nav-logo {
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 0;
+  width: auto;
+  height: 75%;
+  padding: 0 30px;
+  font-family: "bebas", Fallback, sans-serif;
+  animation: fadeOut 3s ease-in 1s forwards; }
+
+@keyframes fadeOut {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
 .nav-list {
+  display: -ms-flexbox;
+  display: flex;
+  width: 60%;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  vertical-align: middle;
+  padding-left: 75px; }
+
+.nav-item {
   list-style-type: none; }
 
 .nav-link {
   text-decoration: none;
   color: #fff;
-  font-family: Montserrat; }
+  font-weight: bold;
+  text-shadow: 0 1px 3px #01454E; }
+  .nav-link:hover {
+    color: #01454E;
+    text-shadow: 0 1px 6px rgba(255, 255, 255, 0.8); }
+
+#about-info-section {
+  display: -ms-flexbox;
+  display: flex;
+  width: 85%;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+#about-text {
+  width: 55%;
+  padding: 50px;
+  color: #535755; }
+
+/*#about-img-conatiner1, #about-img-conatiner2{
+  margin: 0 auto;
+  transform-origin: 50% 50%;
+  overflow: hidden;
+  width: 250px;
+  height: 250px;
+}
+
+
+
+#about-img-conatiner2{
+ width: 355px;
+  height: 355px;
+  transform: rotate(-45deg) translateY(-74px);
+
+}*/
+#about-img-conatiner1 {
+  display: -ms-flexbox;
+  display: flex;
+  margin: auto;
+  width: 40%; }
+
+#about-img {
+  width: 100%;
+  height: auto;
+  margin: auto; }
+
+#skills-section {
+  background: #C5E3E5; }
+
+.skills-list {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin: auto;
+  width: 70%; }
+
+.skill {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  font-size: 25px;
+  color: #01454F;
+  width: 100%; }
+
+.skill-bar {
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  border: 1px solid #01454F;
+  width: 100%;
+  height: 15px;
+  left: 2px;
+  margin-top: 5px; }
+
+.skill-bar > span {
+  display: block;
+  height: 100%;
+  width: 0;
+  max-width: 100%;
+  background-color: #FF9100;
+  animation: expandWidth 2s linear 0s 1 forwards;
+  animation-play-state: paused;
+  -webkit-animation-play-state: paused; }
+
+@keyframes expandWidth {
+  from {
+    width: 0; }
+  to {
+    width: 75%; } }
+
+.ranking {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 100%; }
+
+.expert,
+.novice {
+  position: relative;
+  font-size: 10px;
+  color: #01454F;
+  left: 2px;
+  top: -10px;
+  float: left; }
+
+.company-section {
+  display: -ms-flexbox;
+  display: flex;
+  width: 90%;
+  margin: auto;
+  min-height: 300px; }
+
+.company-logo {
+  position: absolute;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 40%;
+  height: 250px;
+  background: #01454E;
+  margin: 20px auto;
+  border: 1px solid #01454E;
+  left: 50%;
+  transform: translate(-50%, 0); }
+
+.slideLeft {
+  animation: slideLeft 1s linear 0s forwards; }
+
+@keyframes slideLeft {
+  from {
+    left: 50%; }
+  to {
+    left: 200px; } }
+
+.slideRight {
+  animation: slideRight 2s linear 0s forwards; }
+
+@keyframes slideRight {
+  from {
+    left: 50%; }
+  to {
+    left: 600px; } }
+
+.company-fade-square {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 0;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  min-height: 250px;
+  height: 100%;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.4); }
+
+.company-header {
+  position: relative;
+  opacity: 0;
+  top: 10px;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  font-size: 35px; }
+
+.learn-more {
+  position: relative;
+  opacity: 0;
+  color: #fff;
+  width: 100%;
+  top: -30px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 12px; }
+  .learn-more:hover {
+    color: #FF9100;
+    text-decoration: underline; }
+
+.company-text {
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 0;
+  width: 45%;
+  color: #535755; }
+
+#sirius-text {
+  position: relative;
+  left: 450px; }
+
+.fadeIn {
+  animation: fadeIn 2s linear 0s forwards; }
+
+#contact-section {
+  background: #C5E3E5;
+  padding: 75px 0; }
+
+#contact-info {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  font-weight: bold;
+  min-height: 150px;
+  width: 100%;
+  margin: 30px auto;
+  color: #01454F; }
+
+#email {
+  position: relative;
+  vertical-align: middle;
+  font-size: 20px; }
+  #email:hover {
+    text-shadow: 0 1px 4px #FF9100; }
+
+#linkedin {
+  position: relative;
+  top: 12px;
+  left: -75px;
+  font-size: 30px; }
+  #linkedin:hover {
+    text-shadow: 0 1px 4px #FF9100; }
