--- a/resume-site/scss/partials/_navigation.scss
+++ b/resume-site/scss/partials/_navigation.scss
@@ -1,13 +1,47 @@
 .nav {
+    display: flex;
     position: absolute;
-    top: 100px;
+    align-items: center;
+    background: linear-gradient(rgba(197,227,229, 1) 20%, rgba(197,227,229, 0));
+    width: 100%;
+    height: 100px;
+    color: #fff;
     z-index: 2;
 }
+.nav-logo {
+    display: flex;
+    opacity: 0;
+    width: auto;
+    height: 75%;
+    padding: 0 30px;
+    font-family: $headerFont;
+    animation: fadeOut 3s ease-in 1s forwards;
+}
+@keyframes fadeOut {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 .nav-list {
+    display: flex;
+    width: 60%;
+    justify-content: space-around;
+    vertical-align: middle;
+    padding-left: 75px;
+}
+.nav-item {
     list-style-type: none;
 }
 .nav-link {
     text-decoration: none;
     color: #fff;
-    font-family: $headerText;
+    font-weight: bold;
+    text-shadow: 0 1px 3px $headers;
+    &:hover {
+        color: $headers;
+        text-shadow: 0 1px 6px rgba(255, 255,255, .8);
+    }
 }
